# tauri-plugin-subscriptions

./: Cargo.toml  README.md
src/: android.rs  ios.rs  lib.rs
src/android/: Subscriptions.kt
src/ios/: Subscriptions.swift
webview-src/: index.ts
