[package]
name = "tauri-plugin-subscriptions"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "Tauri plugin for handling subscriptions and in-app purchases on iOS and Android"
edition = "2021"
rust-version = "1.65"

[dependencies]
tauri = { version = "2.5.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
once_cell = "1.16"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha" }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
